<resources>
    <string name="app_name">Home sales</string>
    <string name="buttonSkelbimai">Advertising</string>
    <string name="second_activity_button">Home sales (db)</string>
    <string name="Namo_skelbimai">Home ads</string>
    <string name="textview">TextView</string>
    <string name="textview1">Textviews</string>
    <string name="skelbimaitext">Advertising:</string>
    <string name="Prisijungimas">Login</string>
    <string name="LoginPageButton">Log in</string>
    <string name="Registracija">Registration</string>
    <string name="Registruotis">Register</string>
    <string name="LoginPageUsernameInput">User name</string>
    <string name="LoginPagePasswordInput">Password</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Save</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="Rikiavimas">Sorting</string>
    <string name="PavadinimasA_Z">Sort by name A-Z</string>
    <string name="PavadinimasZ_A">Sort by name Z-A</string>
    <string name="KAINA0_9">Sort by price 0-9</string>
    <string name="KAINA9_0">Sort by price 9-0</string>
    <string name="Filtravimas">Filter:</string>
    <string name="KainosMinimumas">Min price</string>
    <string name="KainosMaximumas">Max price</string>
    <string name="Filtruoti">Filter</string>
    <string name="Pridėtiskelbimą">Add</string>
    <string name="Paslėptifiltrus">Hide filters</string>
    <string name="Rodytifiltrus">Show filters</string>
    <string name="appbarMainPage" translatable="false">Main page</string>
    <string name="appbarSkelbimai" translatable="false">Advertisements</string>
    <string name="Title">Title</string>
    <string name="Price">Price</string>
    <string name="Description">Description</string>
    <string name="RoomCount">Room count</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="CreatedBy">Created by</string>
    <string name="ImageID">Image ID</string>
    <string name="ChangeLang">Change language</string>
    <string name="Advertisements">Advertisements for not registered users</string>
    <string name="Atsijungti">Log out</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="HomePageAd">View ad</string>
    <string name="Namai">Home</string>
    <string name="Skelbimai">Advertisements</string>
    <string name="NoUser">User does not exist</string>
    <string name="incorrectPassword">Incorrect password</string>
    <string name="loginSuc">Log in successful</string>
    <string name="empty">Field can not be empty</string>
    <string name="upload">Upload is in progress</string>
    <string name="nofile">File was not selected</string>
    <string name="succ">Registered successfully now you can log in</string>
    <string name="pswnot">Password does not match</string>
    <string name="inc">Incorrect email address</string>
    <string name="small">Too long username</string>
    <string name="longps">Password is too short or long</string>
    <string name="add">Add</string>
    <string name="weareteam">Who we are?</string>
    <string name="whoweare">We are a strong team ready to help you to get the best deal on real estate with the best price and quality selection!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="selectPhoto">Select photo</string>
    <string name="FirstDesign">Modern design</string>
    <string name="SecondDesign">Old fashion design</string>
    <string name="DefaultDesign">Default Design</string>
    <string name="NotificationTitle">Advertisement</string>
    <string name="NotificationDescription">New publish of advertisement </string>
    <string name="selectCamarePhoto">Take a photo</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="Location">Location</string>
    <string name="setLocation">Set location</string>
    <string name="title_activity_maps_activity2new">MapsActivity2new</string>
    <string name="MinCost">From</string>
    <string name="MaxCost">Till</string>
    <string name="BurgerOut">Out</string>
    <string name="editProfile">Edit profile</string>
    <string name="save">Save</string>
    <string name="more">More</string>
    <string name="locations">Locations</string>
</resources>
