<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/editPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:inputType="textPersonName"
        android:hint="@string/LoginPagePasswordInput" />
    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:inputType="textPersonName"
        android:hint="@string/repeat_password" />

    <EditText
        android:id="@+id/editEmailas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:hint="@string/email" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_margin="130dp"
        android:gravity="center"
        android:text="@string/save" />

</LinearLayout>