<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_Title"
                tools:srcCompat="@tools:sample/avatars" />


            <Button
                android:id="@+id/btn_choose_img"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:gravity="center|left"
                android:text="@string/selectPhoto"
                android:textAlignment="center"/>
            <Button
                android:onClick="getImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:gravity="center|left"
                android:text="@string/selectCamarePhoto"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/getLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:ems="10"
                android:gravity="center"
                android:text="@string/Location"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edit_Title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Title"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edit_Price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Price"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/edit_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Location"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edit_Description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Description"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edit_RoomCount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:gravity="center"
                android:hint="@string/RoomCount"
                android:inputType="number"/>

            <EditText
                android:id="@+id/edit_PhoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:gravity="center"
                android:hint="@string/PhoneNumber"
                android:inputType="number"/>

            <EditText
                android:id="@+id/edit_CreatedBy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/CreatedBy"
                android:inputType="textPersonName"/>

            <Button
                android:id="@+id/btn_add_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="100dp"
                android:gravity="center|left"
                android:text="@string/add"
                android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation" />
    </LinearLayout>
</LinearLayout>