<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/editUsernameLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/LoginPageUsernameInput"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editPasswordLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/LoginPagePasswordInput"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/login_login_enter"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="150dp"
        android:gravity="center"
        android:text="@string/LoginPageButton"
        android:textAllCaps="false"
        android:textStyle="bold" />
</LinearLayout>