<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/LoginPageUsernameInput"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Vartotojo vardas"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/LoginPagePasswordInput"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/registerPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Pakartoti slaptažodį"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register_enter"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="91dp"
        android:layout_margin="130dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/Registruotis"
        android:textAllCaps="false"
        android:textStyle="bold" />

</LinearLayout>